﻿drkns 20.05.2016 21:16:12 +0200 - build 4683

1. #0003243 Пункты user-menu, в которых вызывается .cmd начали запускаються в отдельном окне.

drkns 19.05.2016 19:03:12 +0200 - build 4682

1. Уточнение 4679.

zg 19.05.2016 18:08:09 +0200 - build 4681

1. артефакты при altf9 из комбобокса.

drkns 19.05.2016 01:35:59 +0200 - build 4680

1. Уточнение 4679.

drkns 19.05.2016 00:40:27 +0200 - build 4679

1. Продолжение экспериментов с запускателем:
   - тип запуска (консольный с ожиданием / тихий без ожидания) теперь определяется и для системных ассоциаций тоже.
   - System.Executor.BatchType больше нет, всё должно корректно работать автоматически.

zg 18.05.2016 19:37:11 +0200 - build 4678

1. при определённых условиях позиция курсора в текущей строке после ECTL_DELETESTRING была неверной.

drkns 17.05.2016 20:41:13 +0200 - build 4677

1. Рефакторинг - добавим немного const.

zg 17.05.2016 13:03:38 +0200 - build 4676

1. уточнение 4673 для ECTL_SETPOSITION.

drkns 16.05.2016 22:55:36 +0200 - build 4675

1. Ещё одно уточнение работы запускателя.

drkns 15.05.2016 22:00:35 +0200 - build 4674

1. Уточнение 4668.

zg 15.05.2016 17:37:36 +0200 - build 4673

1. убрана блокировка перерисовки окон.

zg 15.05.2016 00:33:49 +0200 - build 4672

1. с форума: символ из "бюжэхъё" не включается в быстрый поиск.

drkns 13.05.2016 00:33:18 +0200 - build 4671

1. Уточнение обработки исключений для gcc.

2. Дополнительная информация в исключениях, брошенных вручную (function, file, line).

3. Рефакторинг.

drkns 11.05.2016 23:59:21 +0200 - build 4670

1. Уточнение обработки DM_GETDIALOGINFО.

2. Warnings.

3. Убраны неиспользуемые #include.

drkns 10.05.2016 22:45:32 +0200 - build 4669

1. Немного переделан способ вывода прогресса копирования.
   По идее, должны исправиться все существующие баги с прорисовкой.
   В реальности, как обычно, возможно всё.

2. Не хватало стандартных шапок в некоторых *.hpp.

drkns 10.05.2016 18:04:22 +0200 - build 4668
