@@ -343,7 +343,7 @@ vmenu2_ptr VMenu2::create(const string& Title, const MenuDataEx *Data, size_t It
 	VMenu2Ptr->InitDialogObjects();
 	VMenu2Ptr->SetMacroMode(MACROAREA_MENU);
 
-	VMenu2Ptr->SetDialogMode(DMODE_KEEPCONSOLETITLE | DMODE_ISMENU);
+	VMenu2Ptr->SetDialogMode(DMODE_ISMENU | (Flags & VMENU_CHANGECONSOLETITLE? 0 : DMODE_KEEPCONSOLETITLE));
 
 	VMenu2Ptr->SetTitle(Title);
 	VMenu2Ptr->SendMessage(DM_SETINPUTNOTIFY, 1, nullptr);
@@ -399,7 +399,7 @@ void VMenu2::SetMenuFlags(DWORD Flags)
 	if(Flags&VMENU_SHOWNOBOX)
 		fdi.Flags|=DIF_LISTNOBOX;
 
-	ListBox().SetMenuFlags(Flags&(VMENU_REVERSEHIGHLIGHT | VMENU_CHANGECONSOLETITLE | VMENU_LISTSINGLEBOX));
+	ListBox().SetMenuFlags(Flags & (VMENU_REVERSEHIGHLIGHT | VMENU_LISTSINGLEBOX));
 
 	SendMessage(DM_SETDLGITEMSHORT, 0, &fdi);
 }
