@@ -1,4 +1,8 @@
-﻿drkns 20.05.2016 21:16:12 +0200 - build 4683
+﻿drkns 20.05.2016 21:57:30 +0200 - build 4684
+
+1. 0003099: В функции Menu не всегда работает флаг FMENU_CHANGECONSOLETITLE
+
+drkns 20.05.2016 21:16:12 +0200 - build 4683
 
 1. #0003243 Пункты user-menu, в которых вызывается .cmd начали запускаються в отдельном окне.
 
